@@ -17,11 +17,6 @@
 my $me = `whoami`;
 chomp $me;
 
-#get the hive version from the hive build.properties
-my $hive_build_properties = "$ENV{HCAT_ROOT}/hive/external/build.properties";
-my $hive_version = `cat $hive_build_properties | grep '^version=' | cut -d= -f2`;
-chomp $hive_version;
-
 # The contents of this file can be rewritten to fit your installation.
 # Also, you can define the following environment variables and set things up as in the test setup
 # PH_ROOT     Root directory where test harness is installed
@@ -30,10 +25,12 @@ chomp $hive_version;
 # PH_CLUSTER  Root directory for cluster being used
 # HCAT_ROOT   Root directory for hcat version being used
 
+my $hdfsBase = $ENV{'PH_HDFS_BASE'} || "/user/hcat";
+
 $cfg = {
     #HDFS
-    'inpathbase'     => '/user/hcat/tests/data'
-    , 'outpathbase'    => '/user/hcat/out'
+    'inpathbase'     => "$hdfsBase/tests/data"
+    , 'outpathbase'    => "$hdfsBase/out"
 
    #LOCAL
     , 'localinpathbase'   => "$ENV{PH_LOCAL}/in" 
@@ -48,10 +45,10 @@ $cfg = {
     , 'jythonjar'        => "$ENV{PH_JYTHON_JAR}"
 
     #TESTDB
-    , 'dbuser'         => 'hcattest'
-    , 'dbhost'         => 'localhost'
-    , 'dbpasswd'       => 'hcattest'
-    , 'dbdb'           => 'hcattestdb'
+    , 'dbuser'         => "$ENV{'PH_DBUSER'}" || 'hcattest'
+    , 'dbhost'         => "$ENV{'PH_DBHOST'}" || 'localhost'
+    , 'dbpasswd'       => "$ENV{'PH_DBPASSWD'}" || 'hcattest'
+    , 'dbdb'           => "$ENV{'PH_DBDB'}" || 'hcattestdb'
 
     #COMMON
     , 'metastore.principal' => "$ENV{METASTORE_PRINCIPAL}"   
@@ -62,21 +59,18 @@ $cfg = {
     , 'hcat_data_dir'    => '/user/hcat/tests/data'
     , 'hivehome'          => $ENV{'PH_HIVE_HOME'}
     , 'hcathome'          => $ENV{'HCAT_INSTALL_DIR'}
-    , 'hcatalog.jar' => "$ENV{HCAT_JAR},$ENV{HIVE_ROOT}/build/dist/lib/hive-serde-$hive_version.jar,$ENV{HIVE_ROOT}/build/dist/lib/hive-exec-$hive_version.jar,$ENV{PIG_HOME}/pig-0.9.2-withouthadoop.jar,$ENV{HIVE_ROOT}/build/dist/lib/hive-metastore-$hive_version.jar,$ENV{HIVE_ROOT}/build/dist/lib/libfb303-0.7.0.jar,$ENV{HIVE_ROOT}/build/dist/lib/jdo2-api-2.3-ec.jar,$ENV{HCAT_ROOT}/storage-handlers/hbase/build/ivy/lib/hbase-storage-handler/hbase-0.92.0.jar,$ENV{HCAT_ROOT}/storage-handlers/hbase/build/ivy/lib/hbase-storage-handler/zookeeper-3.4.3.jar,$ENV{HCAT_ROOT}/storage-handlers/hbase/build/hbase-storage-handler/hbase-storage-handler-0.1.0.jar,$ENV{HCAT_ROOT}/hive/external/build/dist/lib/hive-hbase-handler-$hive_version.jar"
-
+    , 'hcatalog.jar'          => $ENV{'HADOOP_LIBJARS'}
     #PIG
     , 'testconfigpath'   => "$ENV{PH_CLUSTER}"
     , 'hadoopbin'   => "$ENV{PH_CLUSTER_BIN}"
     , 'funcjarPath'      => "$ENV{PH_ROOT}/lib/java"
     , 'paramPath'        => "$ENV{PH_ROOT}/paramfiles"
     , 'pigpath'          => "$ENV{PIG_HOME}"
-    , 'pigjar'           => "$ENV{PIG_JAR}" # Pig jar that doesn't have Antlr
     , 'oldpigpath'       => "$ENV{PH_OLDPIG}"
-    , 'additionaljars' => "$ENV{HCAT_ROOT}/build/hcatalog/hcatalog-0.5.0.jar:$ENV{HCAT_ROOT}/hive/external/build/metastore/hive-metastore-$hive_version.jar:$ENV{HCAT_ROOT}/hive/external/build/dist/lib/libthrift.jar:$ENV{HCAT_ROOT}/hive/external/build/dist/lib/hive-exec-$hive_version.jar:$ENV{HCAT_ROOT}/hive/external/build/dist/lib/libfb303.jar:$ENV{HCAT_ROOT}/hive/external/build/dist/lib/jdo2-api-2.3-ec.jar::$ENV{HCAT_ROOT}/storage-handlers/hbase/build/ivy/lib/hbase-storage-handler/hbase-0.92.0.jar:$ENV{HCAT_ROOT}/storage-handlers/hbase/build/ivy/lib/hbase-storage-handler/zookeeper-3.4.3.jar:$ENV{HCAT_ROOT}/storage-handlers/hbase/build/hbase-storage-handler/hbase-storage-handler-0.1.0.jar:$ENV{HCAT_ROOT}/hive/external/build/dist/lib/hive-hbase-handler-$hive_version.jar:$ENV{'HCAT_INSTALL_DIR'}/etc/hcatalog"
+    , 'additionaljars' => "$ENV{PIG_ADDITIONAL_JARS}"
 
     #HADOOP
-    , 'hadoopHome'       => "$ENV{HCAT_ROOT}/lib"
-    , 'hadoop_classpath' =>  "$ENV{HCAT_EXTRA_JARS}"
+    , 'UNUSEDhadoopHome'       => "$ENV{HCAT_ROOT}/lib"
     , 'userhomePath' => "$ENV{HOME}"
     , 'local.bin'     => '/usr/bin'
     , 'logDir'                => "$ENV{PH_OUT}/log" 
@@ -87,6 +81,7 @@ $cfg = {
     , 'hive_bin_location' => "$ENV{HIVE_ROOT}/build/dist/bin" 
     , 'hbaseconfigpath'   => "$ENV{HBASE_CONF_DIR}"
     , 'hivehome' => "$ENV{HIVE_HOME}"
-    , 'hive.additionaljars' =>  "$ENV{HCAT_ROOT}/build/hcatalog/hcatalog-0.5.0.jar"
+    , 'hive.additionaljars' =>  "$ENV{HCAT_JARS}"
+    , 'hive.conf.dir' => "$ENV{HIVE_CONF_DIR}" || "$ENV{'HCAT_INSTALL_DIR'}/etc/hcatalog"
 
 };
