@@ -102,6 +102,9 @@ Release 0.4.0 - Unreleased
   OPTIMIZATIONS
 
   BUG FIXES
+
+  HCAT-357 e2e harness: allow to run again pre-installed packages (thw via daijy)
+
   HCAT-356 Compilation failure due to API change in HIVE-2908 (rohini via gates)
 
   HCAT-354 hive-hbase-handler jar not getting put in hcat package (gates)
